# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: test-problems.yaml
.sqlx/: query-10304d7521e8634398380fc030e757f5751d3863dd68eb2d5a49559101d96c74.json  query-f5898846c14312683091c1d28670c2848128965dd37118bde2159a4936df384f.json
configuration/: base.yaml
migrations/: 20240919190536_make_status_not_null.sql  20241009201149_seed_user.sql  20250106103412_create_newsletter_issues_table.sql  20250106104702_add_html_content_column_for_newsletter_issues.sql  20250106105635_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: helpers.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  admin_newsletters.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
