[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Aleksandr Aibulatov <zap.aibulatov@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.14.0"
uuid = { version = "1.10.0", features = ["v4", "v7"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
env_logger = "0.11.5"
log = "0.4.22"
tracing = { version = "0.1.40", features = ["log"]}
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tracing-actix-web = "0.7.12"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1.19.0"
